tests/machine/x/c/closure.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/closure.c: In function ‘_lambda0’:
/workspace/mochi/tests/machine/x/c/closure.c:22:35: error: ‘n’ undeclared (first use in this function)
   22 | int _lambda0(int x) { return (x + n); }
      |                                   ^
/workspace/mochi/tests/machine/x/c/closure.c:22:35: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/machine/x/c/closure.c: At top level:
/workspace/mochi/tests/machine/x/c/closure.c:24:7: error: expected identifier or ‘(’ before ‘)’ token
   24 | int (*)(int) makeAdder(int n) { return _lambda0; }
      |       ^
/workspace/mochi/tests/machine/x/c/closure.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/closure.c:27:23: warning: implicit declaration of function ‘makeAdder’ [-Wimplicit-function-declaration]
   27 |   int (*add10)(int) = makeAdder(10);
      |                       ^~~~~~~~~
/workspace/mochi/tests/machine/x/c/closure.c:27:23: warning: initialization of ‘int (*)(int)’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]

   1: #include <stdio.h>
